--- a/index.html
+++ b/index.html
@@ -1,32 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <title>Oi.</title>
-</head>
-<body>
-  <div id="face-page">
-    <h1>Oi, o prazer é todo seu.</h1>
-  </div>
-  <section style="background-color: var(--cyan);">
-    <h2>Eu</h2>
-    <p>Kauan "knfnsc" Fonseca — Meus passatempos? Númerosos; meu talento para exercê-los? <i>Prefiro manter em aberto</i>. Aficcionado por <b>Python</b>, amante de <b>Rust</b> e <b>Go</b>, aprendendo (e falhando) <b>JavaScript</b>.</p>
-  </section>
-  <section style="background-color: var(--pink);">
-    <h2>Maquinações</h2>
-  </section>
-  <section style="background-color: var(--yellow);">
-    <h2>Fale comigo</h2>
-  </section>
-  <footer>
-    "Programar é um ato de amor; <b>amar é um ato de rebeldia</b>"</br>
-    <i>— Eu.</i></br>
-
-    <b>Todos os direitos reservados?</b>
-  </footer>
-</body>
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Oi.</title>
+  </head>
+  <body>
+    <svg id="animated-dots" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%">
+      <pattern id="dot-pattern" patternUnits="userSpaceOnUse" width="20" height="20">
+        <circle cx="10" cy="10" r="1" fill="#06999a" fill-opacity="0.2"/>
+      </pattern>
+      <rect width="200%" height="200%" fill="url(#dot-pattern)"
+        attributeName="transform"
+        type="translate"
+        from="-10 -10"
+        to="10 10"
+        dur="15s"
+        repeatCount="indefinite"/>
+      </rect>
+    </svg>
+    <div id="face-page">
+      <h1>Oi, o prazer é todo seu.</h1>
+    </div>
+    <section id="#me" style="background-color: var(--cyan);">
+      <h2>Eu</h2>
+      <p>Vulgarmente conhecido com Kauan "knfnsc" Fonseca. Meus passatempos? Númerosos; meu talento para exercê-los? <i>Prefiro manter em aberto</i>. Aficcionado por <b>Python</b>, amante de <b>Rust</b> e <b>Go</b>, aprendendo (e falhando) <b>JavaScript</b>.</p>
+    </section>
+    <section id="#project" style="background-color: var(--pink);">
+      <h2>Maquinações</h2>
+      <p><b>Martin</b> (o projeto) e nada mais.</p>
+    </section>
+    <section id="#contact" style="background-color: var(--yellow);">
+      <h2>Fale comigo</h2>
+      <p><b>Email</b>: kn.fnsc@proton.me</p>
+    </section>
+    <footer>
+      <i>"Programar é um ato de amor, amar é um ato de rebeldia"</i> — Eu.</br>
+      <b>© Todos os direitos reservados, acho.</b>
+    </footer>
+  </body>
 </html>
