Consertando (de verdade) o background, ajeitando alguns erros de formatação, adicionando links de contato e projetos e amadurecendo um pouco da linguagem.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <pattern id="dot-pattern" patternUnits="userSpaceOnUse" width="20" height="20">
         <circle cx="10" cy="10" r="1" fill="#06999a" fill-opacity="0.2"/>
       </pattern>
-      <rect width="1000%" height="1000%" fill="url(#dot-pattern)"
+      <rect width="200%" height="200%" fill="url(#dot-pattern)"
         attributeName="transform"
         type="translate"
         from="-10 -10"
@@ -26,19 +26,24 @@
       <h1>Oi, o prazer é todo seu.</h1>
     </div>
     <section id="#me" style="background-color: var(--cyan);">
-      <h2>Eu</h2>
-      <p>Vulgarmente conhecido com Kauan "knfnsc" Fonseca. Meus passatempos? Númerosos; meu talento para exercê-los? <i>Prefiro manter em aberto</i>. Aficcionado por <b>Python</b>, amante de <b>Rust</b> e <b>Go</b>, aprendendo (e falhando) <b>JavaScript</b>.</p>
+      <h2>Sobre mim</h2>
+      <p>Kauan "knfnsc" Fonseca. Filosofia, cinema, grego clássico e violão, nessa ordem. Meus passatempos? <i>Númerosos</i>. Meu talento para exercê-los? <i>Nem tanto</i>. Aficionado por <b>Python</b>, amante de <b>Rust</b> e <b>Go</b>, aprendendo (pelo menos tentando) a amar <b>JavaScript</b>.</p>
     </section>
-    <section id="#project" style="background-color: var(--pink);">
-      <h2>Maquinações</h2>
-      <p><b>Martin</b> (o projeto) e nada mais.</p>
+    <section id="#projects" style="background-color: var(--pink);">
+      <h2>Projetos</h2>
+      <p><b><a href="https://github.com/knfnsc/martin" alt="_blank">Martin</a></b>, um editor de texto voltado para roteiristas.</p>
     </section>
     <section id="#contact" style="background-color: var(--yellow);">
       <h2>Fale comigo</h2>
-      <p><b>Email</b>: kn.fnsc@proton.me</p>
+      <p>
+        <b>Email:</b> <a href="mailto:kn.fnsc@proton.me">kn.fnsc@proton.me</a></br>
+        <b>LinkedIn: </b><a href="https://www.linkedin.com/in/kauan-fonseca-94750835b">aqui</a></br>
+        <b>Linktree:</b> <a href="https://linktr.ee/knfnsc">tudo junto</a>
+      </p>
+    
     </section>
     <footer>
-      <i>"Programar é um ato de amor, amar é um ato de rebeldia"</i> — Eu.</br>
+      <i>"Programar é um ato de amor, e amar é um ato de rebeldia."</i> — Eu</br>
       <b>© Todos os direitos reservados, acho.</b>
     </footer>
   </body>
