--- a/index.html
+++ b/index.html
@@ -1,50 +1,50 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Oi.</title>
-  </head>
-  <body>
-    <svg id="animated-dots" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%">
-      <pattern id="dot-pattern" patternUnits="userSpaceOnUse" width="20" height="20">
-        <circle cx="10" cy="10" r="1" fill="#06999a" fill-opacity="0.2"/>
-      </pattern>
-      <rect width="200%" height="200%" fill="url(#dot-pattern)"
-        attributeName="transform"
-        type="translate"
-        from="-10 -10"
-        to="10 10"
-        dur="15s"
-        repeatCount="indefinite"/>
-      </rect>
-    </svg>
-    <div id="face-page">
-      <h1>Oi, o prazer é todo seu.</h1>
-    </div>
-    <section id="#me" style="background-color: var(--cyan);">
-      <h2>Sobre mim</h2>
-      <p>Kauan "knfnsc" Fonseca. Filosofia, cinema, grego clássico e violão, nessa ordem. Meus passatempos? <i>Númerosos</i>. Meu talento para exercê-los? <i>Nem tanto</i>. Aficionado por <b>Python</b>, amante de <b>Rust</b> e <b>Go</b>, aprendendo (pelo menos tentando) a amar <b>JavaScript</b>.</p>
-    </section>
-    <section id="#projects" style="background-color: var(--pink);">
-      <h2>Projetos</h2>
-      <p><b><a href="https://github.com/knfnsc/martin" alt="_blank">Martin</a></b>, um editor de texto voltado para roteiristas.</p>
-    </section>
-    <section id="#contact" style="background-color: var(--yellow);">
-      <h2>Fale comigo</h2>
-      <p>
-        <b>Email:</b> <a href="mailto:kn.fnsc@proton.me">kn.fnsc@proton.me</a></br>
-        <b>LinkedIn: </b><a href="https://www.linkedin.com/in/kauan-fonseca-94750835b">aqui</a></br>
-        <b>Linktree:</b> <a href="https://linktr.ee/knfnsc">tudo junto</a>
-      </p>
-    
-    </section>
-    <footer>
-      <i>"Programar é um ato de amor, e amar é um ato de rebeldia."</i> — Eu</br>
-      <b>© Todos os direitos reservados, acho.</b>
-    </footer>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Oi.</title>
+</head>
+
+<body>
+  <svg id="animated-dots" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%">
+    <pattern id="dot-pattern" patternUnits="userSpaceOnUse" width="20" height="20">
+      <circle cx="10" cy="10" r="1" fill="var(--cyan)" fill-opacity="0.2" />
+    </pattern>
+    <rect width="200%" height="200%" fill="url(#dot-pattern)" attributeName="transform" type="translate" from="-11 -11"
+      to="1 1" dur="15s" repeatCount="indefinite">
+    </rect>
+  </svg>
+  <div id="face-page">
+    <h1>Oi, o prazer é todo seu.</h1>
+  </div>
+  <section id="#me" style="background-color: var(--cyan);">
+    <h2>Sobre mim</h2>
+    <p>Kauan "knfnsc" Fonseca. Filosofia, cinema, grego clássico e violão, nessa ordem. Meus passatempos?
+      <i>Númerosos</i>. Meu talento para exercê-los? <i>Nem tanto</i>. Aficionado por <b>Python</b>, amante de
+      <b>Rust</b> e <b>Go</b>, aprendendo (pelo menos tentando) a amar <b>JavaScript</b>.
+    </p>
+  </section>
+  <section id="#projects" style="background-color: var(--pink);">
+    <h2>Projetos</h2>
+    <p><b><a href="https://github.com/knfnsc/martin">Martin</a></b>, um editor de texto voltado para roteiristas.</p>
+  </section>
+  <section id="#contact" style="background-color: var(--yellow);">
+    <h2>Fale comigo</h2>
+    <p>
+      <b>Email:</b> <a href="mailto:kn.fnsc@proton.me">kn.fnsc@proton.me</a></br>
+      <b>LinkedIn: </b><a href="https://www.linkedin.com/in/kauan-fonseca-94750835b">aqui</a></br>
+      <b>Linktree:</b> <a href="https://linktr.ee/knfnsc">tudo junto</a>
+    </p>
+  </section>
+  <footer>
+    <i>"Programar é um ato de amor, e amar é um ato de rebeldia."</i> — Eu</br>
+    <b>© Todos os direitos reservados, acho.</b>
+  </footer>
+</body>
+
 </html>
