Mudança no h1, h2, links, outline etc.

--- a/index.html
+++ b/index.html
@@ -11,39 +11,33 @@
 </head>
 
 <body>
-  <svg id="animated-dots" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%">
-    <pattern id="dot-pattern" patternUnits="userSpaceOnUse" width="20" height="20">
-      <circle cx="10" cy="10" r="1" fill="var(--cyan)" fill-opacity="0.2" />
-    </pattern>
-    <rect width="200%" height="200%" fill="url(#dot-pattern)" attributeName="transform" type="translate" from="-11 -11"
-      to="1 1" dur="15s" repeatCount="indefinite">
-    </rect>
-  </svg>
+  <img id="grid-background">
   <div id="face-page">
     <h1>Oi, o prazer é todo seu.</h1>
   </div>
   <section id="#me" style="background-color: var(--cyan);">
     <h2>Sobre mim</h2>
-    <p>Kauan "knfnsc" Fonseca. Filosofia, cinema, grego clássico e violão, nessa ordem. Meus passatempos?
-      <i>Númerosos</i>. Meu talento para exercê-los? <i>Nem tanto</i>. Aficionado por <b>Python</b>, amante de
-      <b>Rust</b> e <b>Go</b>, aprendendo (pelo menos tentando) a amar <b>JavaScript</b>.
+    <p>
+      <b>Kauan "knfnsc" Fonseca</b> — Filosofia, cinema, e <i>Nirvana</i>, nessa ordem. Minhas paixões?
+      Aficionado por <i>Python</i>, amante de <i>Rust</i> e <i>Go</i>, aprendendo (pelo menos tentando) a amar
+      <i>JavaScript</i>.
     </p>
   </section>
   <section id="#projects" style="background-color: var(--pink);">
     <h2>Projetos</h2>
-    <p><b><a href="https://github.com/knfnsc/martin">Martin</a></b>, um editor de texto voltado para roteiristas.</p>
+    <p>
+      <a href="https://github.com/knfnsc/martin">Martin</a> — um editor de texto voltado para
+      roteiristas;<br />
+      <a href="https://github.com/knfnsc/calamo">Calamo</a> — solução PDV simplissíma.
+    </p>
   </section>
   <section id="#contact" style="background-color: var(--yellow);">
     <h2>Fale comigo</h2>
-    <p>
-      <b>Email:</b> <a href="mailto:kn.fnsc@proton.me">kn.fnsc@proton.me</a></br>
-      <b>LinkedIn: </b><a href="https://www.linkedin.com/in/kauan-fonseca-94750835b">aqui</a></br>
-      <b>Linktree:</b> <a href="https://linktr.ee/knfnsc">tudo junto</a>
-    </p>
+    <b>Email:</b> kn.fnsc@proton.me
   </section>
   <footer>
-    <i>"Programar é um ato de amor, e amar é um ato de rebeldia."</i> — Eu</br>
-    <b>© Todos os direitos reservados, acho.</b>
+    <i>"Eu sou Kauan Fonseca e aprovo essa mensagem."</i> — Kauan Fonseca<br />
+    <b>© Todos os direitos reservados, eu acho.</b>
   </footer>
 </body>
 
