Vírgula na section about consertada.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <section id="#me" style="background-color: var(--cyan);">
     <h2>Sobre mim</h2>
     <p>
-      <b>Kauan "knfnsc" Fonseca</b> — Filosofia, cinema, e <i>Nirvana</i>, nessa ordem. Minhas paixões?
+      <b>Kauan "knfnsc" Fonseca</b> — Filosofia, cinema e <i>Nirvana</i>, nessa ordem. Minhas paixões?
       Aficionado por <i>Python</i>, amante de <i>Rust</i> e <i>Go</i>, aprendendo (pelo menos tentando) a amar
       <i>JavaScript</i>.
     </p>
