--- a/index.html
+++ b/index.html
@@ -15,23 +15,19 @@
   <div id="face-page">
     <h1>Oi, o prazer é todo seu.</h1>
   </div>
-  <section id="#me" style="background-color: var(--cyan);">
+  <section id="about-me" style="background-color: var(--cyan);">
     <h2>Sobre mim</h2>
     <p>
-      <b>Kauan "knfnsc" Fonseca</b> — Filosofia, cinema e <i>Nirvana</i>, nessa ordem. Minhas paixões?
-      Aficionado por <i>Python</i>, amante de <i>Rust</i> e <i>Go</i>, aprendendo (pelo menos tentando) a amar
-      <i>JavaScript</i>.
+      <b>Kauan "knfnsc" Fonseca</b> — Filosofia, cinema e Nirvana, nessa ordem. Minhas paixões?
+      Aficionado por Python, amante de Rust e Go, aprendendo (pelo menos tentando) a amar JavaScript.
     </p>
   </section>
-  <section id="#projects" style="background-color: var(--pink);">
+  <section id="projects" style="background-color: var(--pink);">
     <h2>Projetos</h2>
-    <p>
-      <a href="https://github.com/knfnsc/martin">Martin</a> — um editor de texto voltado para
-      roteiristas;<br />
-      <a href="https://github.com/knfnsc/calamo">Calamo</a> — solução PDV simplissíma.
+    <p> <a href="https://github.com/knfnsc/calamo">Calamo</a> — solução PDV simplissíma.
     </p>
   </section>
-  <section id="#contact" style="background-color: var(--yellow);">
+  <section id="contact" style="background-color: var(--yellow);">
     <h2>Fale comigo</h2>
     <b>Email:</b> kn.fnsc@proton.me
   </section>
