Umas coisinhas de aparência e HTML mais semântico.

--- a/index.html
+++ b/index.html
@@ -11,28 +11,29 @@
 </head>
 
 <body>
-  <img id="grid-background">
-  <div id="face-page">
-    <h1>Oi, o prazer é todo seu.</h1>
-  </div>
-  <section id="about-me" style="background-color: var(--cyan);">
-    <h2>Sobre mim</h2>
-    <p>
-      <b>Kauan "knfnsc" Fonseca</b> — Filosofia, cinema e Nirvana, nessa ordem. Minhas paixões?
-      Aficionado por Python, amante de Rust e Go, aprendendo (pelo menos tentando) a amar JavaScript.
-    </p>
-  </section>
-  <section id="projects" style="background-color: var(--pink);">
-    <h2>Projetos</h2>
-    <p> <a href="https://github.com/knfnsc/calamo">Calamo</a> — solução PDV simplissíma.
-    </p>
-  </section>
-  <section id="contact" style="background-color: var(--yellow);">
-    <h2>Fale comigo</h2>
-    <b>Email:</b> kn.fnsc@proton.me
-  </section>
+  <main>
+    <img id="grid-background">
+    <div id="face-page">
+      <h1>Oi, o prazer é todo seu.</h1>
+    </div>
+    <section id="about-me" style="background-color: var(--cyan);">
+      <h2>Sobre mim</h2>
+      <p>
+        Aficionado por Python, amante de Rust e Go, aprendendo (pelo menos tentando) a amar JavaScript.
+      </p>
+    </section>
+    <section id="projects" style="background-color: var(--pink);">
+      <h2>Projetos</h2>
+      <p>
+        <a href="https://github.com/knfnsc/calamo">Calamo</a> — solução PDV simplissíma.
+      </p>
+    </section>
+    <section id="contact" style="background-color: var(--yellow);">
+      <h2>Fale comigo</h2>
+      <b>Email:</b> kn.fnsc@proton.me
+    </section>
+  </main>
   <footer>
-    <i>"Eu sou Kauan Fonseca e aprovo essa mensagem."</i> — Kauan Fonseca<br />
     <b>© Todos os direitos reservados, eu acho.</b>
   </footer>
 </body>
